--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-    "name": "line",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.mjs",
+    "name": "line-viewer",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
+        "react-scripts": "2.1.5"
+    },
     "scripts": {
-        "start": "node --experimental-modules app.mjs",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "parse-test": "node --experimental-modules parse-test.mjs"
     },
     "repository": {
         "type": "git",
@@ -13,5 +20,14 @@
     },
     "author": "yuumu",
     "license": "ISC",
-    "homepage": "https://bitbucket.org/sakuma0831/line#readme"
+    "homepage": "https://bitbucket.org/sakuma0831/line#readme",
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
