--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "react": "^16.8.3",
         "react-dom": "^16.8.3",
+        "react-modal": "^3.10.1",
+        "react-router-dom": "^5.0.1",
         "react-scripts": "2.1.5"
     },
     "scripts": {
