--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@ node_modules
 .env.test.local
 .env.production.local
 
+# editor
+.vscode
+.idea
+*.iml
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
