--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "react-dom": "^16.8.3",
         "react-modal": "^3.10.1",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "2.1.5"
+        "react-scripts": "2.1.5",
+        "ress": "^1.2.2"
     },
     "scripts": {
         "start": "react-scripts start",
