--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "react": "^16.8.3",
-        "react-dom": "^16.8.3",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
         "react-modal": "^3.10.1",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "2.1.5",
+        "react-scripts": "^3.1.1",
         "ress": "^1.2.2"
     },
     "scripts": {
@@ -32,5 +32,8 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "prettier": "^1.18.2"
+    }
 }
