--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "parse-test": "node --experimental-modules parse-test.mjs"
+        "eject": "react-scripts eject"
     },
     "repository": {
         "type": "git",
