--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "precommit": "lint-staged"
     },
     "repository": {
         "type": "git",
@@ -33,6 +34,19 @@
         "not op_mini all"
     ],
     "devDependencies": {
+        "husky": "^3.0.5",
+        "lint-staged": "^9.2.5",
         "prettier": "^1.18.2"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{ts,tsx,js,jsx}": [
+            "prettier --write",
+            "git add"
+        ]
     }
 }
