--- a/.prettierrc
+++ b/.prettierrc
@@ -1,14 +1,5 @@
 {
-  "printWidth": 120,
-  "useTabs": true,
   "trailingComma": "es5",
-  "tabWidth": 4,
   "semi": true,
-  "singleQuote": true,
-  "quoteProps": "consistent",
-  "jsxSingleQuote": true,
-  "bracketSpacing": false,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "endOfLine": "lf"
+  "singleQuote": true
 }
