チュートリアル追加

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "dependencies": {
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
+        "react-id-swiper": "^2.3.2",
         "react-modal": "^3.10.1",
         "react-router-dom": "^5.0.1",
         "react-scripts": "^3.1.1",
-        "ress": "^1.2.2"
+        "ress": "^1.2.2",
+        "swiper": "^5.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
